# clichefactory-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  pyproject.toml
clichefactory/: __init__.py  _chunking.py  _config.py  _extract_finalize.py  _extract_validation.py  _local.py  _long.py  _resolvers.py  _retry.py  _service.py  _service_url.py  _upload.py  _utils.py  chunking.py  cli.py  cliche.py  client.py  errors.py  resolvers.py  types.py
clichefactory/_engine/: __init__.py
clichefactory/_engine/adapters/: csv_adapter.py  docling_adapter.py  eml_adapter.py  vlm_adapter.py  xlsx_adapter.py
clichefactory/_engine/ai_clients/: __init__.py  anthropic_client.py  factory.py  gemini_client.py  json_utils.py  mime_support.py  ollama_client.py  openai_client.py  prompts.py  protocol.py  usage_tracker.py
clichefactory/_engine/cache/: __init__.py  base_cacher.py  file_system_cacher.py
clichefactory/_engine/config/: __init__.py  base_config.py
clichefactory/_engine/contracts/: document_metadata.py  fingerprinting.py  key_builder.py  model_schema.py  operations.py  validators.py
clichefactory/_engine/extractors/: __init__.py
tests/: test_allow_partial.py  test_boundary_enforcement.py  test_cli.py  test_clichefactory_sdk.py  test_csv_parser.py  test_docling_page_markers.py  test_docling_table_context_snippet.py  test_fallback_and_parallel_parsers.py  test_fast_mime_degrade.py  test_lang_mapping.py  test_long_chunking.py  test_long_orchestrator.py  test_long_resolvers.py  test_media_parser_registry.py  test_ollama_client.py  test_retry.py
(+47 files in other folders)
