[project]
name = "clichefactory"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.0.0,<5",
    "httpx>=0.28.0,<0.29",
    "pydantic>=2.8.0,<3",
    "jsonschema>=4.22.0",
    "pikepdf>=10.3.0",
    "google-genai>=1.66.0",
    "anthropic>=0.84.0",
    "openai>=2.29.0,<3",
]

[project.scripts]
clichefactory = "clichefactory.cli:main"

[project.optional-dependencies]
# Local parsing/OCR stack (heavier deps). Install via: `pip install clichefactory[local]`
local = [
    "pymupdf>=1.25.0,<1.26.0",
    "docling>=2.67.0,<2.71.0",
    "openpyxl>=3.1.0,<3.3.0",
    "python-docx>=1.2.0,<1.4.0",
    "pillow>=10.0.0,<11.0.0",
    "rapidocr>=3.3.0,<4.0.0",
    "pytesseract>=0.3.10,<0.3.15",
    "tesserocr>=2.7.0,<2.9.0",
    "pypdf>=4.0.0,<4.2.0",
]

[tool.hatch.version]
path = "clichefactory/__about__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
